Update template to display creation option

--- a/templates/conventions/bailleur.html
+++ b/templates/conventions/bailleur.html
@@ -10,11 +10,11 @@
                         <h2>Etape {{convention_form_step}}/{{ nb_steps }} - Identité du signataire</h2>
                         {% include "common/convention_edit_info.html" with convention=convention %}
                         {% include "common/mandatory_fields_info.html" %}
-                        {% include "common/form/input_text.html" with form_input=form.nom label="Nom du bailleur" mandatory=True %}
+                        {% include "common/form/input_text.html" with form_input=form.nom label="Nom du bailleur" %}
                         <div class="fr-mb-2w">
                             <div class="fr-grid-row fr-grid-row--gutters">
                                 <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
-                                    {% include "common/form/input_text.html" with form_input=form.siret label="SIRET ou SIREN" mandatory=True %}
+                                    {% include "common/form/input_text.html" with form_input=form.siret label="SIRET ou SIREN" %}
                                 </div>
                                 <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-pl-md-1w fr-mb-2w">
                                     {% include "common/form/input_number.html" with step="0.01" form_input=form.capital_social label="Capital social" mandatory=False %}
@@ -22,28 +22,28 @@
                             </div>
                         </div>
 
-                        {% include "common/form/input_text.html" with form_input=form.adresse label="Adresse" mandatory=True %}
+                        {% include "common/form/input_text.html" with form_input=form.adresse label="Adresse" %}
 
                         <div class="fr-mb-2w">
                             <div class="fr-grid-row fr-grid-row--gutters">
                                 <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
-                                    {% include "common/form/input_text.html" with form_input=form.code_postal label="Code postal" mandatory=True %}
+                                    {% include "common/form/input_text.html" with form_input=form.code_postal label="Code postal" %}
                                 </div>
                                 <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-pl-md-1w fr-mb-2w">
-                                    {% include "common/form/input_text.html" with form_input=form.ville label="Ville" mandatory=True %}
+                                    {% include "common/form/input_text.html" with form_input=form.ville label="Ville" %}
                                 </div>
                             </div>
                         </div>
 
-                        {% include "common/form/input_text.html" with form_input=form.dg_nom label="Nom du signataire de la convention" mandatory=True %}
+                        {% include "common/form/input_text.html" with form_input=form.dg_nom label="Nom du signataire de la convention" %}
 
                         <div class="fr-mb-2w">
                             <div class="fr-grid-row fr-grid-row--gutters">
                                 <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
-                                    {% include "common/form/input_text.html" with form_input=form.dg_fonction label="Fonction du signataire de la convention" mandatory=True %}
+                                    {% include "common/form/input_text.html" with form_input=form.dg_fonction label="Fonction du signataire de la convention" %}
                                 </div>
                                 <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-pl-md-1w fr-mb-2w">
-                                    {% include "common/form/input_date.html" with form_input=form.dg_date_deliberation label="Date de délibération" mandatory=True %}
+                                    {% include "common/form/input_date.html" with form_input=form.dg_date_deliberation label="Date de délibération" %}
                                 </div>
                             </div>
                         </div>
