--- a/templates/conventions/recapitulatif.html
+++ b/templates/conventions/recapitulatif.html
@@ -216,7 +216,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    {% include "common/display_field_if_exists.html" with mandatory=True label="Date de fin de la convention" value=programme.date_fin_conventionnement %}
+                                    {% include "common/display_field_if_exists.html" with label="Date de fin de la convention" value=programme.date_fin_conventionnement %}
                                     {% include "common/display_field_if_exists.html" with label="Fonds propres" value=programme.fond_propre %}
                                 </div>
                             </div>
