--- a/templates/conventions/prets.html
+++ b/templates/conventions/prets.html
@@ -94,7 +94,7 @@
                         <div class="fr-mb-2w">
                             <div class="fr-grid-row fr-grid-row--gutters">
                                 <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
-                                    {% include "common/form/input_date.html" with form_input=form.date_fin_conventionnement label="Date de fin de la convention" mandatory=True %}
+                                    {% include "common/form/input_date.html" with form_input=form.date_fin_conventionnement label="Date de fin de la convention" %}
                                 </div>
                                 <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-pl-md-1w fr-mb-2w">
                                     {% include "common/form/input_number.html" with form_input=form.fond_propre step="0.01" label="Fonds propres" %}
