--- a/templates/conventions/selection.html
+++ b/templates/conventions/selection.html
@@ -19,14 +19,14 @@
                                             id="selection"
                                             value="selection"
                                             name="{{form.existing_programme.html_name}}"
-                                            checked
+                                            {% if form.existing_programme.value == 'selection' %}checked{% endif %}
                                             onclick="conv_mode(true)"/>
                                         <label class="fr-label" for="selection">
                                             Séléctionnez votre programme et son financement {% include "common/mandatory_field.html" with form_input=form.lot_uuid %}
                                         </label>
                                     </div>
 
-                                    <div id='programme_selection' class="fr-ml-4w fr-select-group{% if form.lot_uuid.errors %} fr-select-group--error{% endif %}">
+                                    <div id='programme_selection' class="fr-ml-4w fr-select-group{% if form.lot_uuid.errors %} fr-select-group--error{% endif %}"  {% if form.existing_programme.value != 'selection' %}hidden{% endif %}>
                                         <select class="fr-select {% if form.lot_uuid.errors %}fr-select--error{% endif %}" id="lot_uuid" name="lot_uuid" {% if not editable %}disabled{% endif %}>
                                             <option value="" selected disabled hidden>Selectionnez une option</option>
                                             {% for lot in programmes %}
@@ -52,13 +52,18 @@
                                                 id="creation"
                                                 value="creation"
                                                 name="{{form.existing_programme.html_name}}"
+                                                {% if form.existing_programme.value == 'creation' %}checked{% endif %}
                                                 onclick="conv_mode(false)"/>
                                             <label class="fr-label" for="creation">Vous n'avez pas trouvé le programme à conventionner dans la liste déroulante ? Créez votre convention à partir de zéro
                                             </label>
                                         </div>
-                                        <div id='programme_creation' hidden>
+                                        <div id='programme_creation' {% if form.existing_programme.value != 'creation' %}hidden{% endif %}>
 
-                                            {% include "common/form/select_enum.html" with form_input=form.bailleur label="Bailleur" enum=bailleurs without_empty_option=True %}
+                                            {% if bailleurs.length == 1 %}
+                                                {% include "common/form/select_enum.html" with form_input=form.bailleur label="Bailleur" enum=bailleurs without_empty_option=True %}
+                                            {% else %}
+                                                {% include "common/form/select_enum.html" with form_input=form.bailleur label="Bailleur" enum=bailleurs without_empty_option=False %}
+                                            {% endif %}
                                             {% include "common/form/input_text.html" with form_input=form.nom label="Nom du programme" %}
 
                                             <div class="fr-grid-row fr-grid-row--gutters">
