fix the upload of files which are attached to the programme

--- a/templates/common/form/input_upload.html
+++ b/templates/common/form/input_upload.html
@@ -57,7 +57,7 @@
             <div id="{{form_input_files.id_for_label}}_errors"></div>
             <script type="text/javascript">
                 //        document.addEventListener("DOMContentLoaded", function() {
-                let {{form_input.id_for_label}} = init_dropzone_from_file("{{form_input_files.id_for_label}}", '{{ csrf_token }}', '{{ convention.uuid }}' {% if image_only %}, 'image/*'{% endif %});
+                let {{form_input.id_for_label}} = init_dropzone_from_file("{{form_input_files.id_for_label}}", '{{ csrf_token }}', { '{{ object_name }}' : '{{ object_uuid }}' }  {% if image_only %}, 'image/*'{% endif %});
                 init_dropzone_list({{form_input.id_for_label}},"{{form_input_files.id_for_label}}")
                 //        });
             </script>
