--- a/templates/conventions/saved.html
+++ b/templates/conventions/saved.html
@@ -9,9 +9,10 @@
                     <p class="fr-mb-3w">
                         <span style="font-style: italic;">Référence de la convention : {{convention}}</span>
                     </p>
-                    <p class="content-alert alert fr-mb-3w fr-p-3w">
-                        <b>ATTENTION</b> : le document de convention n'est pas encore soumis à l'instruction
-                    </p>
+                    <div role="alert" class="fr-alert fr-alert--error">
+                        <p>ATTENTION</p>
+                        <p>le document de convention n'est pas encore soumis à l'instruction</p>
+                    </div>
                     <p class="fr-mb-3w">La convention est enregistrée mais n'est pas encore soumise au service instructeur,
                         vous pouvez la soumettre à n'importe quel moment en l'éditant de nouveau et en cliquant sur le bouton
                         <b>"Soumettre au service instructeur"</b> sur l'écran de récapitulatif.
